--- a/index.html
+++ b/index.html
@@ -12,17 +12,18 @@
   </head>
   <body>
     <header>
-      text-align: center;
+      <!-- text-align: center; -->
       <!-- logo -->
-      <h1>Exceptional Realty Group</h1>
-
+      <h1 id="center-text">Exceptional Realty Group</h1>
+<div style="text-align: center;">
       <nav>
         <a href="index.html">About</a> <a href="new-properties.html">New Properties</a> <a href="real-estate-listings.html">Listings</a> <a href="market-report.html">Market Report</a> <a href="contact.html">Contact</a> <a href="http://hud.gov" target="_blank">H.U.D.</a>
-        padding: 10x;
+        <!-- padding: 10x;
         left: 10x;
         right: 10x;
-        background: lightgreen;
+        background: lightgreen; -->
       </nav>
+      </div>
     </header>
 
     <section id="featured-property">
@@ -30,14 +31,17 @@
         <img src="images/intro-pic.jpg" alt="A beautiful living room." title="Welcome to Exceptional
 
        Realty Group">
-        <figcaption>345 Carl Street Apt 12, Carrol Rd. Brooklyn, NY - Photo by Denise Richards.</figcaption>
+
+        <figcaption id="center-caption">345 Carl Street Apt 12, Carrol Rd. Brooklyn, NY - Photo by Denise Richards.</figcaption>
       </figure>
 
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae, perferendis nisi nihil debitis aspernatur doloribus quam eveniet quibusdam tempora esse! Repudiandae, assumenda, debitis doloribus ea eius ab at quae totam. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores, inventore aliquid ipsam debitis nulla vitae omnis nemo quisquam? Obcaecati dolor ipsum distinctio reprehenderit aliquid autem ea vel provident voluptas nisi.</p>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa, natus, nobis, tempore recusandae culpa deleniti dignissimos laborum perspiciatis exercitationem obcaecati dolores unde eveniet eius debitis perferendis provident porro. Ipsum, placeat.</p>
     </section>
+    <!-- <div class="like-css"> -->
 
     <section id="details">
+      <div class="like-css" id="im-moving">
       <div>
         <h3>Contact</h3>
         <p>
@@ -47,7 +51,7 @@
         </p>
       </div>
       
-      <div>
+      <div >
         <h3>Correspondence</h3>
         <p>
           Exceptional Realty<br>
@@ -64,8 +68,7 @@
           <a href="#" target="_blank">Professional Moving Crew</a>
         </p>
       </div>
-
-      <div>
+<div id="im-moving">
         <h3>Follow</h3>
         <p>
           <a href="#" target="_blank">YouTube</a><br>
@@ -73,6 +76,8 @@
           <a href="#" target="_blank">Twitter</a>
         </p>
       </div>
+    </div>
     </section>
+    <!-- </div> -->
   </body>
 </html>
